--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,4 @@
-upstream puma {
+upstream pinshop {
   server unix:///home/deploy/apps/pinshop/shared/tmp/sockets/pinshop-puma.sock;
 }
 
@@ -16,13 +16,13 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @puma;
-  location @puma {
+  try_files $uri/index.html $uri @pinshop;
+  location @pinshop {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
-    proxy_pass http://puma;
+    proxy_pass http://pinshop;
   }
 
   error_page 500 502 503 504 /500.html;
